--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,13 @@ jobs:
     - run: npm install @angular/cli@15.0.0 
     - run: npm ci
     - run: npm run build
-    
+    - name: Upload webpage
+      uses: actions/upload-artifact@v3
+      with:
+        name: page
+        path: www
+        retention-days: 30
+
   lint:
     runs-on: ubuntu-latest
     strategy:
