--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,3 +59,15 @@ jobs:
         with:
           audit_level: moderate
           github_token: ${{ secrets.GITHUB_TOKEN }}
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install angular CLI
+        run: npm install @angular/cli@15.0.0 
+      - name: Install dependencies
+        run: npm ci
+      - name: Run tests
+        run: npm run test
+        
