--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,5 +63,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run tests
-        run: npm run test
+        run: npm run test:coverage
         
